@@ -11,8 +11,9 @@
 	fixes in haxe.remoting.Connection and haxe.Unserializer for F9 
 	added haxe.remoting.Connection.urlConnect for JS
 	allowed private typedef fields
-	added neko.net.ThreadServer and ThreadRemotingServer
+	added neko.net.ThreadServer, ThreadRemotingServer and Poll
 	removed neko.net.RemotingBuffer
+	relaxed enums switchs (allow value in first case)
 
 2006-10-29: 1.08
 	fixed bug in flash -debug
